added ZRD and DBL return codes

--- a/rbl.conf
+++ b/rbl.conf
@@ -33,6 +33,7 @@ rbls {
             RBL_DBL_ABUSED_PHISH = "127.0.1.104";
             RBL_DBL_ABUSED_MALWARE = "127.0.1.105";
             RBL_DBL_ABUSED_BOTNET = "127.0.1.106";
+            RBL_DBL_DONT_QUERY_IPS = "127.0.1.255";
         }
     }
     spamhaus_zrd {
@@ -43,6 +44,7 @@ rbls {
         returncodes {
             RBL_ZRD_VERY_FRESH_DOMAIN = "127.0.2.[2-4]+";
             RBL_ZRD_FRESH_DOMAIN = ["127.0.2.[5-9]+","127.0.2.1[0-9]+","127.0.2.2[0-4]+"];
+	    RBL_ZRD_DONT_QUERY_IPS = "127.0.1.255";
         }
     }
 } 
