--- a/rbl_group.conf
+++ b/rbl_group.conf
@@ -62,4 +62,10 @@ symbols = {
     "SH_EMAIL_ZRD_FRESH_DOMAIN" {
         weight = 4.0;
         }
+    "RBL_DBL_DONT_QUERY_IPS {
+        weight = 0.0;
+        }
+    "RBL_ZRD_DONT_QUERY_IPS {
+        weight = 0.0;
+        }
 } 
