added disable_monitoring for DBL and ZRD in rbl.conf

--- a/rbl.conf
+++ b/rbl.conf
@@ -24,6 +24,7 @@ rbls {
         rbl = "your_DQS_key.dbl.dq.spamhaus.net";
         helo = true;
         rdns = true;
+	disable_monitoring = true;
         returncodes {
             RBL_DBL_SPAM = "127.0.1.2";
             RBL_DBL_PHISH = "127.0.1.4";
@@ -41,6 +42,7 @@ rbls {
         rbl = "your_DQS_key.zrd.dq.spamhaus.net";
         helo = true;
         rdns = true;
+	disable_monitoring = true;
         returncodes {
             RBL_ZRD_VERY_FRESH_DOMAIN = "127.0.2.[2-4]+";
             RBL_ZRD_FRESH_DOMAIN = ["127.0.2.[5-9]+","127.0.2.1[0-9]+","127.0.2.2[0-4]+"];
