added error return codes in emails.conf

--- a/rbl_group.conf
+++ b/rbl_group.conf
@@ -68,4 +68,10 @@ symbols = {
     "RBL_ZRD_DONT_QUERY_IPS" {
         weight = 0.0;
         }
+    "SH_EMAIL_ZRD_DONT_QUERY_IPS" {
+        weight = 0.0;
+        }
+    "SH_EMAIL_DBL_DONT_QUERY_IPS" {
+        weight = 0.0;
+        }
 } 
