--- a/emails.conf
+++ b/emails.conf
@@ -16,6 +16,7 @@
             "127.0.1.105",
             "127.0.1.106"
           ];
+	  SH_EMAIL_DBL_DONT_QUERY_IPS = [ "127.0.1.255" ]:
         }
      }
      SH_EMAIL_ZRD {
@@ -31,6 +32,7 @@
             "127.0.2.1[0-9]+",
             "127.0.2.2[0-4]+"
           ];
+	  SH_EMAIL_ZRD_DONT_QUERY_IPS = [ "127.0.1.255" ]:
         }
     } 
 }
