--- a/2.x/rbl.conf
+++ b/2.x/rbl.conf
@@ -94,6 +94,7 @@ rbls {
       rbl = "your_DQS_key.dbl.dq.spamhaus.net";
    }
    "ZRD" {
+      ignore_defaults = true;
       rbl = "your_DQS_key.zrd.dq.spamhaus.net";
       no_ip = true;
       dkim = true;
