Updates to rules and add support for HBL

--- a/2.x/rbl.conf
+++ b/2.x/rbl.conf
@@ -9,7 +9,11 @@ rbls {
         rbl = "your_DQS_key.zen.dq.spamhaus.net";
         returncodes {
           # Add a generig hit on ZEN. It's safe to tag as spam if the last untrusted relay is in this combined list
-          SPAMHAUS_ZEN = "127.0.0.";
+#          SPAMHAUS_ZEN_SBL = "127.0.0.2";
+#          SPAMHAUS_ZEN_CSS = "127.0.0.3";
+#          SPAMHAUS_ZEN_XBL = [ "127.0.0.4", "127.0.0.5", "127.0.0.6", "127.0.0.7" ];
+#          SPAMHAUS_ZEN_PBL = [ "127.0.0.10", "127.0.0.11" ];
+	  SPAMHAUS_ZEN = [ "127.0.0.2", "127.0.0.3", "127.0.0.4", "127.0.0.5", "127.0.0.6", "127.0.0.7", "127.0.0.9", "127.0.0.10", "127.0.0.11" ];
         }
     }
     spamhaus_authbl_received {
@@ -27,6 +31,7 @@ rbls {
         rbl = "your_DQS_key.dbl.dq.spamhaus.net";
         helo = true;
         rdns = true;
+	dkim = true;
         disable_monitoring = true;
         returncodes {
             RBL_DBL_SPAM = "127.0.1.2";
@@ -45,6 +50,7 @@ rbls {
         rbl = "your_DQS_key.zrd.dq.spamhaus.net";
         helo = true;
         rdns = true;
+	dkim = true;
         disable_monitoring = true;
         returncodes {
             RBL_ZRD_VERY_FRESH_DOMAIN = "127.0.2.[2-4]+";
@@ -52,10 +58,25 @@ rbls {
             RBL_ZRD_DONT_QUERY_IPS = "127.0.2.255";
         }
     }
+    "SPAMHAUS_ZEN_URIBL" {
+      rbl = "your_DQS_key.zen.dq.spamhaus.net";
+      resolve_ip = true;
+      replyto = true;
+      emails = true;
+      emails_domainonly = true;
+      returncodes {
+        URIBL_SBL = "127.0.0.2";
+        URIBL_SBL_CSS = "127.0.0.3";
+        URIBL_XBL = ["127.0.0.4", "127.0.0.5", "127.0.0.6", "127.0.0.7"];
+        URIBL_PBL = ["127.0.0.10", "127.0.0.11"];
+        URIBL_DROP = "127.0.0.9";
+      }
+    }
     SH_EMAIL_DBL {
        ignore_defaults = true;
        replyto = true;
        emails_domainonly = true;
+       disable_monitoring = true;
        rbl = "your_DQS_key.dbl.dq.spamhaus.net"
        returncodes = {
          SH_EMAIL_DBL = [
@@ -92,6 +113,7 @@ rbls {
    } 
    "DBL" {
       rbl = "your_DQS_key.dbl.dq.spamhaus.net";
+      disable_monitoring = true;
    }
    "ZRD" {
       ignore_defaults = true;
@@ -106,4 +128,7 @@ rbls {
           ZRD_FRESH_DOMAIN = ["127.0.2.5", "127.0.2.6", "127.0.2.7", "127.0.2.8", "127.0.2.9", "127.0.2.10", "127.0.2.11", "127.0.2.12", "127.0.2.13", "127.0.2.14", "127.0.2.15", "127.0.2.16", "127.0.2.17", "127.0.2.18", "127.0.2.19", "127.0.2.20", "127.0.2.21", "127.0.2.22", "127.0.2.23", "127.0.2.24"];
       }
    }
-} 
+.include(try=true,priority=5) "$LOCAL_CONFDIR/local.d/sh_rbl_hbl.conf"
+}
+
+
