--- a/2.x/rbl_group.conf
+++ b/2.x/rbl_group.conf
@@ -1,12 +1,12 @@
 symbols = {
    "RECEIVED_SPAMHAUS_SBL" {
-        weight = 5.0;
+        weight = 6.0;
         }
     "RECEIVED_SPAMHAUS_CSS" {
-        weight = 4.0;
+        weight = 3.0;
         }
     "RECEIVED_SPAMHAUS_XBL" {
-        weight = 5.0;
+        weight = 0;
         }
     "SPAMHAUS_ZEN" {
         weight = 7.0;
@@ -74,5 +74,113 @@ symbols = {
     "SH_EMAIL_DBL_DONT_QUERY_IPS" {
         weight = 0.0;
         }
+    "SH_HBL_EMAIL" {
+        weight = 7;
+        description = "Email listed in HBL";
+        groups = ["spamhaus"];
+    }
+    "DBL" {
+        weight = 0.0;
+        description = "DBL unknown result";
+        groups = ["spamhaus"];
+    }
+    "DBL_SPAM" {
+        weight = 7;
+        description = "DBL uribl spam";
+        groups = ["spamhaus"];
+    }
+    "DBL_PHISH" {
+        weight = 7;
+        description = "DBL uribl phishing";
+        groups = ["spamhaus"];
+    }
+    "DBL_MALWARE" {
+        weight = 7;
+        description = "DBL uribl malware";
+        groups = ["spamhaus"];
+    }
+    "DBL_BOTNET" {
+        weight = 7;
+        description = "DBL uribl botnet C&C domain";
+        groups = ["spamhaus"];
+    }
+    "DBL_ABUSE" {
+        weight = 5.5;
+        description = "DBL uribl abused legit spam";
+        groups = ["spamhaus"];
+    }
+    "DBL_ABUSE_REDIR" {
+        weight = 1.5;
+        description = "DBL uribl abused spammed redirector domain";
+        groups = ["spamhaus"];
+    }
+    "DBL_ABUSE_PHISH" {
+        weight = 5.5;
+        description = "DBL uribl abused legit phish";
+        groups = ["spamhaus"];
+    }
+    "DBL_ABUSE_MALWARE" {
+        weight = 5.5;
+        description = "DBL uribl abused legit malware";
+        groups = ["spamhaus"];
+    }
+    "DBL_ABUSE_BOTNET" {
+        weight = 5.5;
+        description = "DBL uribl abused legit botnet C&C";
+        groups = ["spamhaus"];
+    }
+    "DBL_PROHIBIT" {
+        weight = 0.0;
+        description = "DBL uribl IP queries prohibited!";
+        groups = ["spamhaus"];
+    }
+    "DBL_BLOCKED_OPENRESOLVER" {
+      weight = 0.0;
+      description = "You are querying Spamhaus from an open resolver, please see https://www.spamhaus.org/returnc/pub/";
+      groups = ["spamhaus"];
+    }
+    "DBL_BLOCKED" {
+      weight = 0.0;
+      description = "You are exceeding the query limit, please see https://www.spamhaus.org/returnc/vol/";
+      groups = ["spamhaus"];
+    }
+    "SPAMHAUS_ZEN_URIBL" {
+        weight = 0.0;
+        description = "Spamhaus ZEN URIBL: Filtered result";
+        groups = ["spamhaus"];
+    }
+    "URIBL_SBL" {
+        weight = 6.5;
+        description = "A domain in the message body resolves to an IP listed in Spamhaus SBL";
+        one_shot = true;
+        groups = ["v"];
+    }
+    "URIBL_SBL_CSS" {
+       weight = 6.5;
+        description = "A domain in the message body resolves to an IP listed in Spamhaus SBL CSS";
+        one_shot = true;
+        groups = ["spamhaus"];
+    }
+    "URIBL_PBL" {
+        weight = 0.01;
+        description = "A domain in the message body resolves to an IP listed in Spamhaus PBL";
+        groups = ["spamhaus"];
+    }
+    "URIBL_DROP" {
+        weight = 6.5;
+        description = "A domain in the message body resolves to an IP listed in Spamhaus DROP";
+        one_shot = true;
+        groups = ["spamhaus"];
+    }
+    "URIBL_XBL" {
+        weight = 5.0;
+        description = "A domain in the message body resolves to an IP listed in Spamhaus XBL";
+        one_shot = true;
+        groups = ["spamhaus"];
+    }
+    .include(try=true,priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/sh_rbl_group_hbl.conf"
+
+
+
 } 
 
