--- a/2.x/rbl_group.conf
+++ b/2.x/rbl_group.conf
@@ -148,7 +148,7 @@ symbols = {
         weight = 6.5;
         description = "A domain in the message body resolves to an IP listed in Spamhaus SBL";
         one_shot = true;
-        groups = ["v"];
+        groups = ["spamhaus"];
     }
     "URIBL_SBL_CSS" {
        weight = 6.5;
@@ -159,6 +159,7 @@ symbols = {
     "URIBL_PBL" {
         weight = 0.01;
         description = "A domain in the message body resolves to an IP listed in Spamhaus PBL";
+        one_shot = true;
         groups = ["spamhaus"];
     }
     "URIBL_DROP" {
@@ -174,8 +175,6 @@ symbols = {
         groups = ["spamhaus"];
     }
     .include(try=true,priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/sh_rbl_group_hbl.conf"
-
-
 
 } 
 
