--- a/2.x/rbl.conf
+++ b/2.x/rbl.conf
@@ -3,6 +3,19 @@ rbls {
         rbl = "your_DQS_key.zen.dq.spamhaus.net";
         from = false;
     }
+    spamhaus_dbl_fullurls {
+    	ignore_defaults = true;
+    	no_ip = true;
+    	rbl = "dbl-beta.spamhaus.org";
+    	selector = 'urls:get_host'
+    	disable_monitoring = true;
+    	returncodes {
+	        DBLABUSED_SPAM_FULLURLS = "127.0.1.102";
+	        DBLABUSED_PHISH_FULLURLS = "127.0.1.104";
+	        DBLABUSED_MALWARE_FULLURLS = "127.0.1.105";
+	        DBLABUSED_BOTNET_FULLURLS = "127.0.1.106";
+    	}
+    }    
     spamhaus_from {
         from = true;
         received = false;
