--- a/2.x/rbl.conf
+++ b/2.x/rbl.conf
@@ -6,7 +6,7 @@ rbls {
     spamhaus_dbl_fullurls {
     	ignore_defaults = true;
     	no_ip = true;
-    	rbl = "dbl-beta.spamhaus.org";
+    	rbl = "your_DQS_key.dbl.dq.spamhaus.net";
     	selector = 'urls:get_host'
     	disable_monitoring = true;
     	returncodes {
