Added rules for 3.x

--- a/3.x/rbl_group.conf
+++ b/3.x/rbl_group.conf
@@ -1,24 +1,4 @@
 symbols = {
-   "DBLABUSED_SPAM_FULLURLS" {
-      weight = 5.5;
-      description = "DBL uribl abused legit spam";
-      groups = ["spamhaus"];
-   }
-   "DBLABUSED_PHISH_FULLURLS" {
-      weight = 5.5;
-      description = "DBL uribl abused legit phish";
-      groups = ["spamhaus"];
-   }
-   "DBLABUSED_MALWARE_FULLURLS" {
-      weight = 5.5;
-      description = "DBL uribl abused legit malware";
-      groups = ["spamhaus"];
-   }
-   "DBLABUSED_BOTNET_FULLURLS" {
-      weight = 5.5;
-      description = "DBL uribl abused legit botnet";
-      groups = ["spamhaus"];
-   }
    "RECEIVED_SPAMHAUS_SBL" {
         weight = 6.0;
         }
@@ -119,6 +99,30 @@ symbols = {
         description = "DBL uribl botnet C&C domain";
         groups = ["spamhaus"];
     }
+
+
+    "DBLABUSED_SPAM_FULLURLS" {
+        weight = 5.5;
+        description = "DBL uribl abused legit spam";
+        groups = ["spamhaus"];
+    }
+    "DBLABUSED_PHISH_FULLURLS" {
+        weight = 5.5;
+        description = "DBL uribl abused legit phish";
+        groups = ["spamhaus"];
+    }
+    "DBLABUSED_MALWARE_FULLURLS" {
+        weight = 5.5;
+        description = "DBL uribl abused legit malware";
+        groups = ["spamhaus"];
+    }
+    "DBLABUSED_BOTNET_FULLURLS" {
+        weight = 5.5;
+        description = "DBL uribl abused legit botnet";
+        groups = ["spamhaus"];
+    }
+
+
     "DBL_ABUSE" {
         weight = 5.5;
         description = "DBL uribl abused legit spam";
@@ -194,6 +198,11 @@ symbols = {
         one_shot = true;
         groups = ["spamhaus"];
     }
+    "SPAMHAUS_SBL_URL" {
+        weight = 6.5;
+        description = "A numeric URL in the message body is listed in Spamhaus SBL";
+        one_shot = true;
+        groups = ["spamhaus"];
+    }
     .include(try=true,priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/sh_rbl_group_hbl.conf"
-
-} 
+}
