--- a/3.x/rbl.conf
+++ b/3.x/rbl.conf
@@ -3,19 +3,6 @@ rbls {
         rbl = "your_DQS_key.zen.dq.spamhaus.net";
         from = false;
     }
-    spamhaus_dbl_fullurls {
-    	ignore_defaults = true;
-    	no_ip = true;
-    	rbl = "your_DQS_key.dbl.dq.spamhaus.net";
-    	selector = 'urls:get_host'
-    	disable_monitoring = true;
-    	returncodes {
-	        DBLABUSED_SPAM_FULLURLS = "127.0.1.102";
-	        DBLABUSED_PHISH_FULLURLS = "127.0.1.104";
-	        DBLABUSED_MALWARE_FULLURLS = "127.0.1.105";
-	        DBLABUSED_BOTNET_FULLURLS = "127.0.1.106";
-    	}
-    }    
     spamhaus_from {
         from = true;
         received = false;
@@ -58,6 +45,19 @@ rbls {
             RBL_DBL_DONT_QUERY_IPS = "127.0.1.255";
         }
     }
+    spamhaus_dbl_fullurls {
+	ignore_defaults = true;
+	no_ip = true;
+	rbl = "your_DQS_key.dbl.dq.spamhaus.net";
+	selector = 'urls:get_host'
+        disable_monitoring = true;
+        returncodes {
+            DBLABUSED_SPAM_FULLURLS = "127.0.1.102";
+            DBLABUSED_PHISH_FULLURLS = "127.0.1.104";
+            DBLABUSED_MALWARE_FULLURLS = "127.0.1.105";
+            DBLABUSED_BOTNET_FULLURLS = "127.0.1.106";
+        }
+    }
     spamhaus_zrd {
         # Add checks on the HELO string also for DQS
         rbl = "your_DQS_key.zrd.dq.spamhaus.net";
@@ -74,8 +74,11 @@ rbls {
     "SPAMHAUS_ZEN_URIBL" {
       rbl = "your_DQS_key.zen.dq.spamhaus.net";
       resolve_ip = true;
+      checks = ['urls'];
       replyto = true;
       emails = true;
+      ipv4 = true;
+      ipv6 = true;
       emails_domainonly = true;
       returncodes {
         URIBL_SBL = "127.0.0.2";
@@ -142,6 +145,16 @@ rbls {
           ZRD_FRESH_DOMAIN = ["127.0.2.5", "127.0.2.6", "127.0.2.7", "127.0.2.8", "127.0.2.9", "127.0.2.10", "127.0.2.11", "127.0.2.12", "127.0.2.13", "127.0.2.14", "127.0.2.15", "127.0.2.16", "127.0.2.17", "127.0.2.18", "127.0.2.19", "127.0.2.20", "127.0.2.21", "127.0.2.22", "127.0.2.23", "127.0.2.24"];
       }
    }
+   spamhaus_sbl_url {
+	ignore_defaults = true
+        rbl = "your_DQS_key.sbl.dq.spamhaus.net";
+        checks = ['urls'];
+        disable_monitoring = true;
+        returncodes {
+            SPAMHAUS_SBL_URL = "127.0.0.2";
+        }
+    }
+
 .include(try=true,priority=5) "$LOCAL_CONFDIR/local.d/sh_rbl_hbl.conf"
 }
 
