Remove need for pattern matching by explicitly listing all return codes

--- a/3.x/rbl.conf
+++ b/3.x/rbl.conf
@@ -66,8 +66,10 @@ rbls {
 	dkim = true;
         disable_monitoring = true;
         returncodes {
-            RBL_ZRD_VERY_FRESH_DOMAIN = "127.0.2.[2-4]+";
-            RBL_ZRD_FRESH_DOMAIN = ["127.0.2.[5-9]+","127.0.2.1[0-9]+","127.0.2.2[0-4]+"];
+            RBL_ZRD_VERY_FRESH_DOMAIN = ["127.0.2.2", "127.0.2.3", "127.0.2.4"];
+            RBL_ZRD_FRESH_DOMAIN = [
+               "127.0.2.5", "127.0.2.6", "127.0.2.7", "127.0.2.8", "127.0.2.9", "127.0.2.10", "127.0.2.11", "127.0.2.12", "127.0.2.13", "127.0.2.14", "127.0.2.15", "127.0.2.16", "127.0.2.17", "127.0.2.18", "127.0.2.19", "127.0.2.20", "127.0.2.21", "127.0.2.22", "127.0.2.23", "127.0.2.24"
+            ];
             RBL_ZRD_DONT_QUERY_IPS = "127.0.2.255";
         }
     }
@@ -117,18 +119,15 @@ rbls {
        disable_monitoring = true;
        rbl = "your_DQS_key.zrd.dq.spamhaus.net"
        returncodes = {
-         SH_EMAIL_ZRD_VERY_FRESH_DOMAIN = [
-           "127.0.2.[2-4]+"
-         ];
+         SH_EMAIL_ZRD_VERY_FRESH_DOMAIN = ["127.0.2.2", "127.0.2.3", "127.0.2.4"];
          SH_EMAIL_ZRD_FRESH_DOMAIN = [
-           "127.0.2.[5-9]+",
-           "127.0.2.1[0-9]+",
-           "127.0.2.2[0-4]+"
+           "127.0.2.5", "127.0.2.6", "127.0.2.7", "127.0.2.8", "127.0.2.9", "127.0.2.10", "127.0.2.11", "127.0.2.12", "127.0.2.13", "127.0.2.14", "127.0.2.15", "127.0.2.16", "127.0.2.17", "127.0.2.18", "127.0.2.19", "127.0.2.20", "127.0.2.21", "127.0.2.22", "127.0.2.23", "127.0.2.24"
          ];
          SH_EMAIL_ZRD_DONT_QUERY_IPS = [ "127.0.2.255" ];
        }
-   } 
+   }
    "DBL" {
+      # override the defaults for DBL defined in modules.d/rbl.conf
       rbl = "your_DQS_key.dbl.dq.spamhaus.net";
       disable_monitoring = true;
    }
