Put the cryptowallet and HBL_URL symbols in sh_rbl_group_hbl.conf HBL is called a blocklist...

--- a/3.x/sh_rbl_group_hbl.conf
+++ b/3.x/sh_rbl_group_hbl.conf
@@ -15,3 +15,45 @@
     description = "An attachment hash is listed in Spamhaus HBL as suspicious";
     groups = ["spamhaus"];
 }
+
+"RBL_SPAMHAUS_CW_BTC" {
+    score = 7;
+    description = "Bitcoin found in Spamhaus cryptowallet list";
+    groups = ["spamhaus"];
+}
+
+"RBL_SPAMHAUS_CW_ETH" {
+    score = 7;
+    description = "Ethereum found in Spamhaus cryptowallet list";
+    groups = ["spamhaus"];
+}
+
+"RBL_SPAMHAUS_CW_BCH" {
+    score = 7;
+    description = "Bitcoinhash found in Spamhaus cryptowallet list";
+    groups = ["spamhaus"];
+}
+
+"RBL_SPAMHAUS_CW_XMR" {
+    score = 7;
+    description = "Monero found in Spamhaus cryptowallet list";
+    groups = ["spamhaus"];
+}
+
+"RBL_SPAMHAUS_CW_LTC" {
+    score = 7;
+    description = "Litecoin found in Spamhaus cryptowallet list";
+    groups = ["spamhaus"];
+}
+
+"RBL_SPAMHAUS_CW_XRP" {
+    score = 7;
+    description = "Ripple found in Spamhaus cryptowallet list";
+    groups = ["spamhaus"];
+}
+
+"RBL_SPAMHAUS_HBL_URL" {
+    score = 7;
+    description = "URL found in spamhaus HBL blocklist";
+    groups = ["spamhaus"];
+}
