re-enable SPAMHAUS_ZEN_URIBL (thanks mdierksen).

--- a/3.x/rbl.conf
+++ b/3.x/rbl.conf
@@ -74,6 +74,7 @@ rbls {
         }
     }
     "SPAMHAUS_ZEN_URIBL" {
+      enabled = true;
       rbl = "your_DQS_key.zen.dq.spamhaus.net";
       resolve_ip = true;
       checks = ['urls'];
