--- a/3.x/rbl.conf
+++ b/3.x/rbl.conf
@@ -8,7 +8,7 @@ rbls {
         received = false;
         rbl = "your_DQS_key.zen.dq.spamhaus.net";
         returncodes {
-          # Add a generig hit on ZEN. It's safe to tag as spam if the last untrusted relay is in this combined list
+          # Add a generic hit on ZEN. It's safe to tag as spam if the last untrusted relay is in this combined list
 #          SPAMHAUS_ZEN_SBL = "127.0.0.2";
 #          SPAMHAUS_ZEN_CSS = "127.0.0.3";
 #          SPAMHAUS_ZEN_XBL = [ "127.0.0.4", "127.0.0.5", "127.0.0.6", "127.0.0.7" ];
